--- a/mockup-2/index.html
+++ b/mockup-2/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+        <link rel="icon" href="images/dragonfly-logo.svg">
 	</head>
 	<body class="is-preload">
 
@@ -34,11 +35,13 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<img src="images/a-natural-pest-solution-logo-text-cropped.svg" alt="A Natural Pest Solution" id="logo">
+							<img src="images/yellow-dragonfly.svg" alt="dragonfly logo" id="yellow-dragonfly">
+                            <h1>A Natural Pest Solution</h1>
 							<p>A Natural Pest Solution is a local company to the Joliet area, focused on controlling your home or business' pest concerns. Through our Certified Entomologist's experience, we will design a pest solution to alleviate your pest concerns.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>						</div>
+							</ul>
+                        </div>
 					</section>
 
 				<!-- One -->
