Finish design of homepage, added files for subpages

--- a/mockup-2/index.html
+++ b/mockup-2/index.html
@@ -37,7 +37,7 @@
 						<div class="inner">
 							<img src="images/yellow-dragonfly.svg" alt="dragonfly logo" id="yellow-dragonfly">
                             <h1>A Natural Pest Solution</h1>
-							<p>A Natural Pest Solution is a local company to the Joliet area, focused on controlling your home or business' pest concerns. Through our Certified Entomologist's experience, we will design a pest solution to alleviate your pest concerns.</p>
+							<p>A Natural Pest Solution is a local company to the Joliet area, focused on controlling your home or business' pest concerns.  Through our Certified Entomologists experience, we will design a pest solution to alleviate your pest concerns.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -153,7 +153,7 @@
 					<ul class="menu">
 						<li>&copy; 2025 A Natural Pest Solution. All rights reserved.</li>
                         <li>Developed By <a href="https://lei-rivera.github.io/">Lei R.</a></li>
-                        <li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
+                        <li>Image By <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a></li>
                         <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
