--- a/mockup-2/index.html
+++ b/mockup-2/index.html
@@ -37,7 +37,7 @@
 						<div class="inner">
 							<img src="images/yellow-dragonfly.svg" alt="dragonfly logo" id="yellow-dragonfly">
                             <h1>A Natural Pest Solution</h1>
-							<p>A Natural Pest Solution is a local company to the Joliet area, focused on controlling your home or business' pest concerns.  Through our Certified Entomologists experience, we will design a pest solution to alleviate your pest concerns.</p>
+							<p>A Natural Pest Solution is a local company to the Joliet area, focused on controlling your home or business' pest concerns. Through our Certified Entomologists experience, we will design a pest solution to alleviate your pest concerns.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -53,7 +53,7 @@
 									<h2>Rodents</h2>
 									<p>Mice, norway rats, voles, and other rodents can sneak into your home and cause serious damage. Whether you're hearing noises in the walls or finding droppings, we offer help for removal and prevention.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="subpages/rodents.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -65,7 +65,7 @@
 									<h2>Wasps</h2>
 									<p>Wasps, hornets, and yellowjackets can be dangerous when they nest too close for comfort. Their painful stings can make them a serious nuisance on your lawn or in your home. We identify and remove nests safely to keep you and your space protected.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="subpages/wasps.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
@@ -77,7 +77,7 @@
 									<h2>Other Insects</h2>
 									<p>Ants, bedbugs, german cockroaches, and other insects invade your home for food, warmth, and shelter—often multiplying fast. Our associate entomologist can identify the insect and offer a solution to eliminate and prevent them from coming back.</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="subpages/insects.html" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
