--- a/mockup-2/subpages/rodents.html
+++ b/mockup-2/subpages/rodents.html
@@ -6,22 +6,24 @@
 -->
 <html>
 	<head>
-		<title>Generic - Hyperspace by HTML5 UP</title>
+		<title>Rodents - A Natural Pest Solution</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="../index.html" class="title">A Natural Pest Solution</a>
+                <a href="../index.html"><img src="../images/white-dragonfly.svg" alt="white dragonfly logo"></a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="../index.html">Home</a></li>
+						<li><a href="rodents.html" class="active">Rodents</a></li>
+						<li><a href="wasps.html">Wasps</a></li>
+                        <li><a href="insects.html">Other Insects</a></li>
 					</ul>
 				</nav>
 			</header>
