--- a/rebuild/index.html
+++ b/rebuild/index.html
@@ -1,38 +1,144 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Natural Pest Solutiont</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Sidebar -->
-     <section id="sidebar">
-        <div class="inner">
+
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>A Natural Pest Solutiont</title>
+        <link rel="stylesheet" href="style.css"> <!-- CSS Link -->
+        <script src="https://kit.fontawesome.com/26030cfeae.js" crossorigin="anonymous"></script> <!--Font Awesome Link-->
+        <!-- Google Font -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
+    </head>
+
+    <body>
+        <!-- HEADER -->
+        <header id="header">
             <nav>
-                <ul>
+                <ul class="header">
                     <li><a href="#intro">Welcome</a></li>
-                    <li><a href="#one">Who We Are</a></li>
-                    <li><a href="#two">Problems We Solve</a></li>
+                    <li><a href="#one">What We Treat</a></li>
+                    <li><a href="#two">Who We Are</a></li>
                     <li><a href="#three">Get In Touch</a></li>
                 </ul>
             </nav>
-        </div>
-     </section>
+        </header>
 
-     <!-- Wrapper -->
-     <div id="wrapper">
+        <!-- SECTION 1: MAIN -->
+        <section id="main" class="space">
+            <img src="images/yellow-dragonfly.svg" alt="yellow dragonfly logo">
+            <h1>A Natural Pest Solution</h1>
+            <p>
+                <b>A Natural Pest Solution</b> is a local company to the Joliet area, focused on controlling your home or business' pest concerns. 
+            </p>
+            <p>
+                Through our <i>certified Entomologist's</i> experience, we will design a pest solution to alleviate your pest concerns.
+            </p>
+            <a href="#pests" class="button main">Learn More</a>
+        </section>
 
-        <!-- Intro -->
-        <section id="intro">
-            <div id="intro-text">
-                <img src="images/a-natural-pest-solution-logo-text.svg" alt="A Natural Pest Solution Logo Text" id="logo-text">
+        <!-- SECTION 2: WHAT WE TREAT -->
+        <section id="pests">
+            <div class="pest-example">
+                <div class="pest-image"><img src="images/slyfox-photography-BYtFC4Iyk0c-unsplash.jpg" alt="rodent peeking through the opening of a cardboard box"></div>
+                <div class="pest-content space">
+                    <h2>Rodents</h2>
+                    <p class="pest-paragraph">
+                        Mice, norway rats, voles, and other rodents can sneak into your home and cause serious damage. Whether you're hearing noises in the walls or finding droppings, we offer help for removal and prevention.
+                    </p>
+                    <a class="button" href="subpages/rodents.html">Learn More</a>
+                </div>
             </div>
-            <div id="truck-image">
-                <img src="images/yellow-truck.jpg" alt="company yellow truck">
+            <div class="pest-example">
+                <div class="pest-image"><img src="images/bee-safe-GkknyQzyK98-unsplash.jpg" alt="wasp hive perched on the edge of a ceiling"></div>
+                <div class="pest-content space">
+                    <h2>Wasps</h2>
+                    <p class="pest-paragraph">
+                        Wasps, hornets, and yellowjackets can be dangerous when they nest too close for comfort. Their painful stings can make them a serious nuisance on your lawn or in your home. We identify and remove nests safely to keep you and your space protected.
+                    </p>
+                    <a class="button" href="subpages/wasps.html">Learn More</a>
+                </div>
+            </div>
+            <div class="pest-example">
+                <div class="pest-image"><img src="images/marco-neri-EeYVX0VHn9g-unsplash.jpg" alt="ants crowding around a crumb of food"></div>
+                <div class="pest-content space">
+                    <h2>Other Insects</h2>
+                    <p class="pest-paragraph">
+                        Ants, bedbugs, german cockroaches, and other insects invade your home for food, warmth, and shelter—often multiplying fast. Our associate Entomologist can identify the insect and offer a solution to eliminate and prevent them from coming back.
+                    </p>
+                    <a class="button" href="subpages/insects.html">Learn More</a>
+                </div>
             </div>
         </section>
-     </div>
-</body>
+
+        <!-- SECTION 3: WHO WE ARE -->
+         <section id="company" class="space">
+            <div class="text space">
+                <h3>Who We Are</h3>
+                <p>
+                    We're your neighbors here in Joliet, dedicated to keeping local homes and businesses pest-free. Our <i>Certified Entomologist</i> on the team can identify problems and create a personalized, environmentally friendly pest control plan that brings you peace of mind.
+                </p>
+            </div>
+            <div class="image space">
+                <img src="images/yellow-truck.jpg" alt="A Natural Pest Solution branded yellow truck">
+            </div>
+            
+         </section>
+
+         <!-- SECTION 4: CONTACT -->
+         <section id="contact" class="space">
+            <h3>Get In Touch</h3>
+            <p>
+                Allow us to help keep your home pest free. Reach out anytime to speak with our professional about creating a pest free environment in your home or business!
+            </p>
+            <form action="">
+                <div>
+                    <label for="name">Name</label>
+                    <input type="text" name="name" id="name" required />
+                </div>
+                <div>
+                    <label for="email">Email</label>
+                    <input type="email" name="email" id="email" required />
+                </div>
+                <div>
+                    <label for="message">Message</label>
+                    <input type="text" name="message" id="message" required />
+                </div>
+                <div>
+                    <input type="submit" value="SEND MESSAGE">
+                </div>
+                
+            </form>
+            <div>
+                <ul>
+                    <li>
+                        <h4>Email</h4>
+                        <p>anaturalpestsolution@gmail.com</p>
+                    </li>
+                    <li>
+                        <h4>Phone</h4>
+                        <p>(815) 714-9543</p>
+                    </li>
+                    <li>
+                        <h4>Socials</h4>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <img src="images/nextdoor-svgrepo-com.svg" alt="nextdoor logo icon">
+                    </li>
+                </ul>
+                <img src="images/dragonfly-logo.svg" alt="A Natural Pest Solution dragonfly logo">
+            </div>
+         </section>
+
+         <!-- FOOTER -->
+          <footer id="footer" class="space">
+            <ul>
+                <li>Website Developed by <a href="https://lei-rivera.github.io/">Lei Rivera</a></li>
+                <li>Image by <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a></li>
+                <li>&#169; 2025 A Natural Pest Solution. All rights reserved.</li>
+            </ul>
+          </footer>
+    </body>
+
 </html>
