--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <!-- SEPARATE THIS IN MOBILE VIEW  -->
                     <b>A Natural Pest Solution</b> is a local company in the Joliet area focused on controlling your home or business' pest concerns. Through our <i>certified Entomologist's</i> experience, we will design a pest solution to alleviate your pest concerns!
                 </p>
-                <a href="#contact" class="button main">Get a Quote Today!</a>
+                <a href="#pests" class="main">Learn More<br><i class="fa-solid fa-arrow-down"></i></a>
             </div>
             
         </section>
@@ -53,7 +53,7 @@
                     <p class="pest-paragraph">
                         Mice, norway rats, voles, and other rodents can sneak into your home and cause serious damage. Whether you're hearing noises in the walls or finding droppings, we offer help for removal and prevention.
                     </p>
-                    <a class="button" href="subpages/rodents.html">Learn More</a>
+                    <a class="pest-link" href="subpages/rodents.html">Look for signs of rodents in your home <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="pest-example">
@@ -63,7 +63,7 @@
                     <p class="pest-paragraph">
                         Wasps, hornets, and yellowjackets can be dangerous when they nest too close for comfort. Their painful stings can make them a serious nuisance on your lawn or in your home. We identify and remove nests safely to keep you and your space protected.
                     </p>
-                    <a class="button" href="subpages/wasps.html">Learn More</a>
+                    <a class="pest-link" href="subpages/wasps.html">Find out where they nest <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
             <div class="pest-example">
@@ -73,7 +73,7 @@
                     <p class="pest-paragraph">
                         Ants, bedbugs, german cockroaches, and other insects invade your home for food, warmth, and shelter—often multiplying fast. Our associate Entomologist can identify the insect and offer a solution to eliminate and prevent them from coming back.
                     </p>
-                    <a class="button" href="subpages/insects.html">Learn More</a>
+                    <a class="pest-link" href="subpages/insects.html">Learn More <i class="fa-solid fa-arrow-right"></i></a>
                 </div>
             </div>
         </section>
@@ -83,7 +83,7 @@
             <div class="text">
                 <h3>Who We Are</h3>
                 <p>
-                    At A Natural Pest Solution, we believe that every home and business in the Joliet area deserves a safe, effective pest-free environment. To achieve that, we bring the local expertise of our <i>Certified Entomologist</i> to identify problems and create a personalized, environmentally-friendly pest control plan that brings you peace of mind.
+                    At A Natural Pest Solution, we believe that every home and business in the Joliet area deserves a safe, effective pest-free environment. To achieve that, we bring the local expertise of our <i>certified Entomologist</i> to identify problems and create a personalized, environmentally-friendly pest control plan that brings you peace of mind.
                 </p>
                 <p>
                     Founded right here in the Joliet area, we're proud to be a locally owned and operated pest-control company. We serve homeowners and businesses here in Joliet and the surrounding areas, helping others one inspection and treatment at a time.
@@ -154,7 +154,7 @@
          <!-- FOOTER -->
           <footer id="footer" class="space">
             <ul>
-                <li>&#169; 2025 A Natural Pest Solution. All rights reserved.</li>
+                <li>&#169; A Natural Pest Solution. All rights reserved.</li>
                 <li>Website Developed by <a href="https://lei-rivera.github.io/">Lei Rivera</a></li>
                 <li>Images by <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a>, <a href="https://unsplash.com/">Unsplash</a></li>
             </ul>
