Add phone and email link

--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
                     <ul>
                         <li>
                             <h4>Email</h4>
-                            <p>anaturalpestsolution@gmail.com</p>
+                            <a href="mailto:anaturalpestsolution@gmail.com">anaturalpestsolution@gmail.com</a>
                         </li>
                         <li>
                             <h4>Phone</h4>
-                            <p>815-714-9543</p>
+                            <a href="tel:815-714-9543">815-714-9543</a>
                         </li>
                         <li>
                             <h4>Socials</h4>
