try to fix mobile???

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
-        <title>A Natural Pest Solutiont</title>
+        <title>A Natural Pest Solution</title>
         <link rel="icon" href="images/dragonfly-logo.svg">
         <link rel="stylesheet" href="style.css"> <!-- CSS Link -->
         <script src="main.js" defer></script>
