Finish rebuilding main hero section of homepage

--- a/rebuilt/index.html
+++ b/rebuilt/index.html
@@ -38,8 +38,17 @@
             <div class="main-content">
                 <div class="logo-img"><img src="images/yellow-dragonfly.svg" alt="yellow dragonfly logo"></div>
                 <h1 class="company-logo">A Natural Pest Solution</h1>
-                <p><b>A Natural Pest Solution</b> is a local company in the Joliet area focused on controlling your home or business' pest concerns. Through our <em>certified Entomologist's</em> experience, we will design a pest solution to alleviate your pest concerns!</p>
-                <a href="#pests">Learn More<br><i class="fa-solid fa-arrow-down"></i></a>
+                <p>
+                    <b>A Natural Pest Solution</b> is a local company in the Joliet area focused on controlling your home or business' pest concerns. Through our <em>certified Entomologist's</em> experience, we will design a pest solution to alleviate your pest concerns!
+                </p>
+                <!-- hidden paragraph for mobile -->
+                 <p class="hide-for-mobile">
+                    <b>A Natural Pest Solution</b> is a local company in the Joliet area focused on controlling your home or business' pest concerns.
+                 </p>
+                 <p class="hide-for-mobile">
+                    Through our <em>certified Entomologist's</em> experience, we will design a pest solution to alleviate your pest concerns!
+                 </p>
+                <a href="#pests" class="main">Learn More<br><i class="fa-solid fa-arrow-down"></i></a>
             </div>
         </section>
 
