--- a/rebuilt/subpages/rodents.html
+++ b/rebuilt/subpages/rodents.html
@@ -25,7 +25,7 @@
 
             <!-- Logo and Company Name -->
             <div class="header">
-                <div class="header-logo-img">
+                <div class="header-logo">
                     <a href="../index.html">
                         <img src="images/white-dragonfly.svg" alt="white dragonfly logo">
                     </a>
