Finish rebuilding section 2: what we treat of homepage

--- a/rebuilt/index.html
+++ b/rebuilt/index.html
@@ -38,7 +38,7 @@
             <div class="main-content">
                 <div class="logo-img"><img src="images/yellow-dragonfly.svg" alt="yellow dragonfly logo"></div>
                 <h1 class="company-logo">A Natural Pest Solution</h1>
-                <p>
+                <p class="hide-for-desktop">
                     <b>A Natural Pest Solution</b> is a local company in the Joliet area focused on controlling your home or business' pest concerns. Through our <em>certified Entomologist's</em> experience, we will design a pest solution to alleviate your pest concerns!
                 </p>
                 <!-- hidden paragraph for mobile -->
@@ -59,11 +59,17 @@
             <!-- Rodents -->
             <div class="pest-example">
                 <div class="pest-image">
-                    <img src="images/" alt="mouse peeking out of a carboard box">
+                    <img src="images/slyfox-photography-BYtFC4Iyk0c-unsplash.jpg" alt="mouse peeking out of a carboard box">
                 </div>
                 <div class="pest-text-content">
                     <h2>Rodents</h2>
-                    <p>
+                    <p class="hide-for-desktop">
+                        Mice, norway rats, voles, and other rodents can sneak into your home and cause serious damage.
+                    </p>
+                    <p class="hide-for-desktop">
+                        Whether you're hearing noises in the walls or finding droppings, we offer help for removal and prevention.
+                    </p>
+                    <p class="hide-for-mobile">
                         Mice, norway rats, voles, and other rodents can sneak into your home and cause serious damage. Whether you're hearing noises in the walls or finding droppings, we offer help for removal and prevention.
                     </p>
                     <a href="subpages/rodents.html" class="learn-more-pests">Look for signs of rodents in your home<i class="fa-solid fa-arrow-right"></i></a>
@@ -73,11 +79,17 @@
             <!-- Wasps -->
             <div class="pest-example">
                 <div class="pest-image">
-                    <img src="images/" alt="wasp hive on the edge of a ceiling">
+                    <img src="images/bee-safe-GkknyQzyK98-unsplash.jpg" alt="wasp hive on the edge of a ceiling" class="wasp">
                 </div>
                 <div class="pest-text-content">
                     <h2>Wasps</h2>
-                    <p>
+                    <p class="hide-for-desktop">
+                        Wasps, hornets, and yellowjackets can be dangerous when they nest too close for comfort. Their painful stings can make them a serious nuisance on your lawn or in your home.
+                    </p>
+                    <p class="hide-for-desktop">
+                        We identify and remove nests safely to keep you and your space protected.
+                    </p>
+                    <p class="hide-for-mobile">
                         Wasps, hornets, and yellowjackets can be dangerous when they nest too close for comfort. Their painful stings can make them a serious nuisance on your lawn or in your home. We identify and remove nests safely to keep you and your space protected.
                     </p>
                     <a href="subpages/wasps.html" class="learn-more-pests">Find out where they nest<i class="fa-solid fa-arrow-right"></i></a>
@@ -87,11 +99,17 @@
             <!-- Other Insects -->
             <div class="pest-example">
                 <div class="pest-image">
-                    <img src="images/" alt="ants surrounding a crumb of food">
+                    <img src="images/marco-neri-EeYVX0VHn9g-unsplash.jpg" alt="ants surrounding a crumb of food">
                 </div>
                 <div class="pest-text-content">
                     <h2>Other Insects</h2>
-                    <p>
+                    <p class="hide-for-desktop">
+                        Ants, bedbugs, german cockroaches, and other insects invade your home for food, warmth, and shelter—often multiplying fast.
+                    </p>
+                    <p class="hide-for-desktop">
+                        Our associate Entomologist can identify the insect and offer a solution to eliminate and prevent them from coming back.
+                    </p>
+                    <p class="hide-for-mobile">
                         Ants, bedbugs, german cockroaches, and other insects invade your home for food, warmth, and shelter—often multiplying fast. Our associate Entomologist can identify the insect and offer a solution to eliminate and prevent them from coming back.
                     </p>
                     <a href="subpages/insects.html" class="learn-more-pests">Learn how different insects invade your home<i class="fa-solid fa-arrow-right"></i></a>
