Finish rebuilding section 3: who we are, of homepage

--- a/rebuilt/index.html
+++ b/rebuilt/index.html
@@ -120,15 +120,21 @@
 
         <!-- SECTION 3: WHO WE ARE -->
         <section id="company">
-            <div class="company-text">
-                <h3>Who We Are</h3>
-                <p>
-                    At <b>A Natural Pest Solution</b>, we believe that every home and business deserves a safe, effective pest-free environment. To achieve that, we bring the local expertise of our <em>certified Entomologist</em> to identify problems and create a personalized, environmentally-friendly pest control plan that brings you peace of mind.
-                </p>
-                <p>
-                    Founded right here in the Joliet area, we're proud to be a locally owned and operated pest-control company. We serve homeowners and businesses here in Joliet and the surrounding areas, helping others one inspection at a time.
-                </p>
+            <h3>Who We Are</h3>
+            <div class="company-container">
+                <div class="company-text">
+                    <p>
+                        At <b>A Natural Pest Solution</b>, we care about keeping our community's homes and businesses safe, comfortable, and pest free. With help from our <em>certified Entomologist,</em> we take the time to understand your specific pest problems and build a treatment plan that's both effective and environmentally responsible, so that you can relax knowing your space is protected.
+                    </p>
+                    <p>
+                        We proud to call Joliet home. As a locally owned and operated business, we treat every customer like a neighbor — because you are one. Whether it's a small home visit or a large business inspection, we're here to help keep Joliet and the surrounding areas pest-free, one property at a time.
+                    </p>
+                </div>
+                <div class="company-img">
+                    <img src="images/yellow-truck.jpg" alt="A Natural Pest Solution's branded yellow truck">
+                </div>
             </div>
+            
         </section>
 
 
