Finish rebuilding section 4: get in touch, of homepage

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 Allow us to help keep your home pest free. Reach out anytime to speak with our professional about creating a pest free environment in your home or business!
             </p>
             <div class="contact-container">
-                <form action="#">
+                <form name="contact" action="/subpages/succes.html" method="POST" data-netlify="true">
                     <div class="form-info name">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" class="textbox" required />
