Finish rebuilding footer

--- a/rebuilt/index.html
+++ b/rebuilt/index.html
@@ -231,10 +231,10 @@
 
         <!-- FOOTER -->
         <footer>
-            <ul>
+            <ul class="footer">
                 <li>&#169; A Natural Pest Solution. All rights reserved.</li>
                 <li><a href="https://lei-rivera.github.io" class="footer-link">Website Developed by Lei Rivera</a></li>
-                <li>Image By <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background" class="footer-link">Starline on Freepik</a></li>
+                <li>Image By <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a></li>
             </ul>
         </footer>
     </body>
