--- a/rebuilt/subpages/rodents.html
+++ b/rebuilt/subpages/rodents.html
@@ -21,26 +21,26 @@
     <body>
 
         <!-- HEADER -->
-        <header>
+        <header class="subpage-header">
 
             <!-- Logo and Company Name -->
             <div class="header">
                 <div class="header-logo">
-                    <a href="../index.html">
+                    <a href="../index.html" class="logo-link">
                         <img src="images/white-dragonfly.svg" alt="white dragonfly logo">
                     </a>
-                    <a href="../index.html" class="company-title">A Natural Pest Solution</a>
+                    <a href="../index.html" class="company-logo">A Natural Pest Solution</a>
                 </div>
             </div>
 
             <!-- Subpages Navigation -->
-            <div class="header">
+            <div class="header hide-for-desktop">
                 <nav>
                     <ul>
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="rodents.html" class="active">Rodents</a></li>
                         <li><a href="wasps.html">Wasps</a></li>
-                        <li><a href="Other Insects">Other Insects</a></li>
+                        <li><a href="insects.html">Other Insects</a></li>
                     </ul>
                 </nav>
             </div>
@@ -48,12 +48,12 @@
 
         <!-- MAIN BODY -->
         <main>
-            <h1></h1>
+            <h1>Rodents (Norway rats, mice, voles, etc.)</h1>
             <hr>
             
             <!-- Introductory Paragraph -->
             <p>
-
+                Rodents are among the most common household and property pests in Illinois. They can cause significant damage to homes, contaminate food, and spread diseases.
             </p>
 
             <!-- Container -->
@@ -62,16 +62,42 @@
                 <!-- Text Content -->
                 <div class="subpage-content">
                     <p>
-
+                         The common house mouse can squeeze through very small openings, find food and shelter in buildings, and reproduce rapidly. House mice contaminate food and surfaces with their droppings and urine, which can carry harmful bacteria such as Salmonella. They also chew on wires, insulation, and stored items, potentially causing fires or costly property damage.
                     </p>
+                    <p>
+                        The Norway rat (also known as the brown rat or sewer rat) is a larger, more destructive rodent. The IDPH describes them as “destructive pests … [that] eat and contaminate food, damage buildings and other property by their gnawing and burrowing, and may spread diseases that affect people and pets.” They can exploit openings as small as ½ inch across to enter structures.
+                    </p>
+                    <p>
+                        While voles are primarily outdoor rodents and less likely to invade buildings, they can cause serious damage to lawns, gardens, and landscapes. The University of Illinois Extension states that voles “can cause serious damage and even death of woody plants” and create tunnels or runways often under snow. 
+                    </p>
+                    <p>
+                        At A Natural Pest Solution, we provide safe, effective, and environmentally-aware rodent-control services for homes and businesses in Joliet and the surrounding region. Our aim is to remove infestations quickly and help prevent their return — all while using methods that are safe for families, pets, and the environment. 
+                    </p>
+                    <p>
+                        If you've seen droppings, heard scratching in walls or ceilings, noticed tunnels around landscaping, or simply suspect rodent activity, don't delay. Rats and mice can reproduce quickly, and voles can silently damage landscapes.
+                    </p>
+                    <p>
+                        Pictured are some real examples from previous clients. Don't wait, contact A Natural Pest Solution today for rodent control in Joliet and the surrounding areas!
+                    </p>
+                    <a href="tel:815-714-9543" class="button">Call For a Quote Today!</a>
                 </div>
 
                 <!-- Image -->
-                <div class="subpage-image">
-                    <img src="" alt="">
+                <div class ="subpage-image">
+                    <div class="rodent-image"><img src="images/rodent_sign1.jpg" alt=""></div>
+                    <div class="rodent-image"><img src="images/rodent_sign2.jpg" alt=""></div>
                 </div>
             </div>
         </main>
+
+        <!-- FOOTER -->
+        <footer>
+            <ul class="footer">
+                <li>&#169; A Natural Pest Solution. All rights reserved.</li>
+                <li><a href="https://lei-rivera.github.io" class="footer-link">Website Developed by Lei Rivera</a></li>
+                <li>Image By <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a></li>
+            </ul>
+        </footer>
     </body>
 
 </html>
