Add success page for form and move contents out of rebuilt folder. Move old contents into old-files

--- a/subpages/insects.html
+++ b/subpages/insects.html
@@ -4,78 +4,105 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rodents - A Natural Pest Solution</title>
-        <link rel="icon" href="../images/dragonfly-logo.svg">
-        <link rel="stylesheet" href="../style.css"> <!-- CSS Link -->
-        <script src="https://kit.fontawesome.com/26030cfeae.js" crossorigin="anonymous"></script> <!--Font Awesome Link-->
+        <title>Other Insects</title>
+
+        <!-- CSS LINK -->
+        <link rel="stylesheet" href="../styles.css">
+
+        <!-- FONT AWESOME LINK -->
+        <script src="https://kit.fontawesome.com/26030cfeae.js" crossorigin="anonymous"></script>
+
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Stack+Sans+Text:wght@200..700&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <header id="subpage-header">
+
+        <!-- HEADER -->
+        <header class="subpage-header">
+
+            <!-- Logo and Company Name -->
             <div class="header">
-                <a href="../index.html" class="show"><img src="../images/white-dragonfly.svg" alt="white dragonfly logo"></a>
-                <a href="../index.html">A Natural Pest Solution</a>
+                <div class="header-logo">
+                    <a href="../index.html" class="logo-link">
+                        <img src="images/white-dragonfly.svg" alt="white dragonfly logo">
+                    </a>
+                    <a href="../index.html" class="company-logo">A Natural Pest Solution</a>
+                </div>
             </div>
-            <div class="header">
+
+            <!-- Subpages Navigation -->
+            <div class="header hide-for-desktop">
                 <nav>
                     <ul>
-                        <li><a href="../index.html" class="nav-item">Home</a></li>
-                        <li><a href="rodents.html" class="nav-item">Rodents</a></li>
-                        <li><a href="wasps.html" class="nav-item">Wasps</a></li>
-                        <li><a href="insects.html" class="nav-item active">Other Insects</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="rodents.html">Rodents</a></li>
+                        <li><a href="wasps.html">Wasps</a></li>
+                        <li><a href="insects.html" class="active">Other Insects</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <!-- MAIN SECTION -->
-         <section class="subpage-main">
-            <h2 class="smaller-h2">Managing Ants, Bed Bugs, German Cockroaches and More</h2>
+        <!-- MAIN BODY -->
+        <main>
+            <h1>Other Insects (Ants, Bedbugs, German Cockroaches, etc.)</h1>
             <hr>
-            <p>
-                Insects such as ants, bed bugs and German cockroaches may appear harmless at first glance, but they can interfere with your comfort, contaminate your space, pose allergy or bite risks, and for commercial settings, cause regulatory or reputational issues.
-            </p>
-            <p>
-                Ants are among the most frequent household invaders in Illinois. According to the Illinois Department of Public Health (IDPH), ants consume and contaminate food, build nests near and in structures, and some species can even sting people or pets. Common signs of an ant problem include visible trails of ants inside or outside the building, small mounds or nests in turf or near foundations, and attracted to food or moisture.
-            </p>
-            <p>
-                Bed bugs (Cimex lectularius) are tiny, elusive pests that feed on human blood during sleep. The University of Illinois Extension explains that, although they are not known to spread disease, they are a serious nuisance, cause anxiety, bites and can be difficult to eliminate.
-            </p>
-            <p>
-                The Blattella germanica (German cockroach) is one of the most common and difficult indoor pests, especially in apartments, restaurants and multi-unit buildings. The University of Illinois Extension highlights that DIY spray and aerosol products often fail against German cockroaches because of hiding in cracks, rapid reproduction (up to six generations per year), and insecticide resistance. 
-            </p>
-            <p>
-                At A Natural Pest Solution, we deliver safe, effective and environmentally conscious insect-control services for homes and businesses throughout Joliet and the surrounding areas. We identify the specific pest, apply targeted treatment, and help you prevent re-infestation—while keeping your family, pets and the environment in mind.
-            </p>
-            <p>
-                Below are some real examples of clients dealing with german cockroaches and ants:
-            </p>
-            <div class="insect-images subpage-image-example">
-                <img src="../images/cockroach1.jpg" alt="german cockroaches in a crack in the wall">
-                <img src="../images/cockroach2.jpg" alt="german cockroaches in a kitchen pantry">
-                <img src="../images/ants1.jpg" alt="ants surrounding a yellow substance">
-                <img src="../images/ants2.jpg" alt="ants crowding on the wall near carpet flooring">
-                <img src="../images/ants3.jpg" alt="ants crowding a crack in the wall">
-            </div>
             
+            <!-- Introductory Paragraph -->
             <p>
-                Contact A Natural Pest Solution today for rodent control in Joliet and the surrounding areas!
+                Many Illinois homeowners deal with persistent problems caused by smaller household pests such as ants, bed bugs, and german cockroaches. These insects can contaminate food, spread bacteria, trigger allergies, damage property, and create stressful living conditions when left untreated.
             </p>
-            <a href="../index.html#contact" class="button subpage-button">Call Today For a Free Quote</a>
-         </section>
 
-         <!-- FOOTER -->
-          <footer id="footer" class="space">
-            <ul>
+            <!-- Container -->
+            <div class="main-container">
+
+                <!-- Text Content -->
+                <div class="subpage-content">
+                    <p>
+                         Ants are among the most common indoor pests in Illinois and often enter homes in search of food or moisture. Once ants establish foraging trails, they can be persistent and difficult to eliminate without properly identifying the species and locating the colony. Ant infestations often worsen when homeowners rely on store-bought sprays, as these treatments can cause colonies to split and spread. Effective control requires addressing the factors that attract ants, such as access to food and moisture, sealing potential entry points, and using targeted professional treatments that remove the entire colony rather than just the visible workers.
+                    </p>
+                    <p>
+                        Bed bugs have become increasingly common throughout Illinois in homes, apartments, and other shared living spaces. These small, reddish-brown insects hide in mattresses, furniture seams, electrical outlets, and baseboards, feeding on human blood at night. The Illinois Department of Public Health reports that although bed bugs do not spread infectious diseases, their bites can lead to itching, welts, anxiety, and significant sleep disruption. Common signs of an infestation include reddish stains on bedding, shed skins near mattress seams, and clusters of itchy bites on exposed areas of skin. Because bed bugs are resilient and excellent at hiding, do-it-yourself treatments are rarely successful. The CDC and university extension programs emphasize that most DIY products either scatter the population or fail to reach hidden areas where eggs and nymphs are located. Professional inspection and treatment are essential to eliminate bed bugs at every stage of development and ensure they do not return.
+                    </p>
+                    <p>
+                        German cockroaches are one of the most troublesome indoor pests and thrive in warm, humid areas such as kitchens and bathrooms. These small tan insects, recognizable by the two dark stripes behind their heads, are the most common indoor cockroach species in Illinois. The Illinois Department of Public Health notes that German cockroaches can spread bacteria such as Salmonella and contribute to asthma and allergy symptoms, particularly in children. Their rapid reproduction means small problems can escalate quickly if not addressed. Infestations are often identified by pepper-like droppings, a musty or oily odor, and night-time activity near appliances, cabinets, or drains. Because these cockroaches rely heavily on moisture, issues such as leaking pipes or excess humidity help them thrive. Store-bought sprays seldom solve the problem and may push cockroaches deeper into wall voids; targeted professional baits and growth regulators remain the most effective way to eliminate active infestations and prevent future ones.
+                    </p>
+                    <p>
+                        Insects like ants, bed bugs, and German cockroaches can create significant disruptions in a home when left unaddressed.
+                    </p>
+                    <p>
+                        At A Natural Pest Solution, we employ the expertise of our <em>certified Entomologist</em>, using research-based, family-safe methods that focus on identifying the source of the infestation, applying targeted treatments, and implementing long-term prevention strategies. Our integrated pest management approach ensures thorough, lasting results with minimal chemical use.
+                    </p>
+                    <p>
+                        Pictured are some real examples of previous clients dealing with ants and german cockroaches. If you're experiencing issues with ants, bed bugs, cockroaches, or other persistent pests, A Natural Pest Solution is ready to provide prompt and reliable service to restore comfort and peace of mind in your home.
+                    </p>
+                    <a href="tel:815-714-9543" class="button">Call For a Quote Today!</a>
+                </div>
+
+                <!-- Image -->
+                <div class ="subpage-image">
+                    <div class="bug-image"><img src="images/cockroach2.jpg" alt=""></div>
+                    <div class="bug-image"><img src="images/cockroach1.jpg" alt=""></div>
+                    <div class="bug-image"><img src="images/ants3.jpg" alt=""></div>
+                </div>
+            </div>
+            <div class="insect-images">
+                <div class="bug-image"><img src="images/ants1.jpg" alt=""></div>
+                <div class="bug-image"><img src="images/ants2.jpg" alt=""></div>
+            </div>
+        </main>
+
+        <!-- FOOTER -->
+        <footer>
+            <ul class="footer">
                 <li>&#169; A Natural Pest Solution. All rights reserved.</li>
-                <li>Website Developed by <a href="https://lei-rivera.github.io/">Lei Rivera</a></li>
+                <li><a href="https://lei-rivera.github.io" class="footer-link">Website Developed by Lei Rivera</a></li>
+                <li>Image By <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a></li>
             </ul>
-          </footer>
+        </footer>
     </body>
 
 </html>
