--- a/subpages/wasps.html
+++ b/subpages/wasps.html
@@ -4,79 +4,93 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Rodents - A Natural Pest Solution</title>
-        <link rel="icon" href="../images/dragonfly-logo.svg">
-        <link rel="stylesheet" href="../style.css"> <!-- CSS Link -->
-        <script src="https://kit.fontawesome.com/26030cfeae.js" crossorigin="anonymous"></script> <!--Font Awesome Link-->
+        <title>Wasps</title>
+
+        <!-- CSS LINK -->
+        <link rel="stylesheet" href="../styles.css">
+
+        <!-- FONT AWESOME LINK -->
+        <script src="https://kit.fontawesome.com/26030cfeae.js" crossorigin="anonymous"></script>
+
         <!-- Google Font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Stack+Sans+Text:wght@200..700&display=swap"
-            rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Stack+Sans+Text:wght@200..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <header id="subpage-header">
+
+        <!-- HEADER -->
+        <header class="subpage-header">
+
+            <!-- Logo and Company Name -->
             <div class="header">
-                <a href="../index.html" class="show"><img src="../images/white-dragonfly.svg" alt="white dragonfly logo"></a>
-                <a href="../index.html">A Natural Pest Solution</a>
+                <div class="header-logo">
+                    <a href="../index.html" class="logo-link">
+                        <img src="images/white-dragonfly.svg" alt="white dragonfly logo">
+                    </a>
+                    <a href="../index.html" class="company-logo">A Natural Pest Solution</a>
+                </div>
             </div>
-            <div class="header">
+
+            <!-- Subpages Navigation -->
+            <div class="header hide-for-desktop">
                 <nav>
                     <ul>
-                        <li><a href="../index.html" class="nav-item">Home</a></li>
-                        <li><a href="rodents.html" class="nav-item">Rodents</a></li>
-                        <li><a href="wasps.html" class="nav-item active">Wasps</a></li>
-                        <li><a href="insects.html" class="nav-item">Other Insects</a></li>
+                        <li><a href="../index.html">Home</a></li>
+                        <li><a href="rodents.html">Rodents</a></li>
+                        <li><a href="wasps.html" class="active">Wasps</a></li>
+                        <li><a href="insects.html">Other Insects</a></li>
                     </ul>
                 </nav>
             </div>
         </header>
 
-        <!-- MAIN SECTION -->
-         <section class="subpage-main">
-            <h2 class="smaller-h2">Protect Your Home or Business from Wasps, Hornets and Yellowjackets</h2>
+        <!-- MAIN BODY -->
+        <main class="wasp">
+            <h1>Wasps, Hornets, and Yellowjackets</h1>
             <hr>
-            <p>
-                Stinging insects such as wasps, hornets and yellowjackets can pose serious risks—especially to people who are allergic—and can disrupt outdoor living and business activity.
-            </p>
-            <p>
-                Yellowjackets (for example species of the genera Vespula spp.) are social wasps that often cause stinging problems in late summer and fall when food is scarce and colonies are large. They are frequently mistaken for bees but differ in appearance and behaviour. Because their colonies can include many workers and they scavenge sweet foods and meats, they pose particular risk when outdoor activities or trash containers are present.
-            </p>
-            <p>
-                Hornets and paper wasps (for example the “bald-faced hornet” and other species) also build social nests and can sting multiple times. The Illinois Department of Public Health (IDPH) places these under “Wasps” in its bees/wasps guidance. Paper-wasp nests often hang from eaves or overhangs, among other places.
-            </p>
-            <p>
-                At A Natural Pest Solution, we provide safe, effective, and environmentally-aware services for managing these insects around homes and businesses in Joliet and the surrounding region. Our goal is to remove or safely manage nests, and help prevent re-infestations, all while using approaches that minimise risk to your family, pets and the environment.
-            </p>
-
-            <div class="subpage-example">
-                <div class="subpage-example-text">
-                    <p>
-                        Here are some real examples of previous clients dealing with yellowjackets, including an thermal image showing a wasp inside a wall of a customer's home:
-                    </p>
-                </div>
-                
-                <div class="wasp-images subpage-image-example">
-                    <img src="../images/yellowjacket1.jpg" alt="shed rodent fur and droppings">
-                    <img src="../images/yellowjacket2.jpg" alt="rodent droppings and a potential entryway">
-                    <img src="../images/yellowjacket3.jpg" alt="thermal image of a wasp nest inside a wall taken by an FLIR camera">
-                </div>
-            </div>
             
+            <!-- Paragraphs -->
             <p>
-                Contact A Natural Pest Solution today for rodent control in Joliet and the surrounding areas!
+                Stinging insects are a common concern for Illinois homeowners, especially during spring and summer when colonies reach their peak size. Wasps, hornets, and yellowjackets can build nests near homes, decks, or landscaping, creating risks for stings and aggressive behavior.
             </p>
-            <a href="../index.html#contact" class="button subpage-button">Call Today For a Free Quote</a>
-         </section>
+            <p>
+                Paper wasps are slender insects with long legs that hang down during flight. They typically appear brown with yellow or reddish markings. Their open, umbrella-shaped nests are commonly found under roof overhangs, eaves, and porch ceilings. According to the Illinois Department of Public Health, paper wasps are generally less aggressive than yellowjackets but will defend their nest if disturbed. Their stings can cause pain, swelling, or allergic reactions.
+            </p>
+            <p>
+                Yellowjackets are small, fast-moving wasps with bright yellow and black coloration. They typically nest in the ground, wall voids, landscaping, or abandoned rodent burrows. Yellowjackets are among the most aggressive stinging insects in Illinois. According to IDPH and multiple Extension programs, they are strongly attracted to human food and become more aggressive in late summer as natural food sources decline. Their stings can be severe and may trigger allergic responses.
+            </p>
+            <p>
+                Bald-faced hornets, a common species in Illinois, are actually a type of large yellowjacket. They have black-and-white coloration, large bodies, and build large football-shaped paper nests in trees, shrubs, or on buildings. Hornets are highly protective of their nests. The University of Illinois Extension notes that these insects can sting repeatedly and may become aggressive when nests are approached. Their nests often grow very large by late summer, increasing risk to people or pets.
+            </p>
+            <p>
+                Stinging insect nests can contain hundreds to thousands of aggressive workers by late summer. Attempting DIY removal is dangerous and often ineffective.
+            </p>
+            <p>
+                At A Natural Pest Solution, we specialize in safely locating, identifying, and removing these nests to keep your family protected.
+            </p>
+            <p>
+                Pictured below are some real examples of previous clients dealing with yellowjackets, including a thermal image of a nest inside the wall of a customer's home. If you're seeing increased wasp or hornet activity around your home, or suspect a hidden nest, don't wait! Contact A Natural Pest Solution today!
+            </p>
+            <a href="tel:815-714-9543" class="button">Call For a Quote Today!</a>
 
-         <!-- FOOTER -->
-          <footer id="footer" class="space">
-            <ul>
+            <!-- Image -->
+            <div class ="wasp-subpage-image">
+                <div class="wasp-image"><img src="images/yellowjacket1.jpg" alt=""></div>
+                <div class="wasp-image"><img src="images/yellowjacket2.jpg" alt=""></div>
+                <div class="wasp-image"><img src="images/yellowjacket3.jpg" alt=""></div>
+            </div>
+        </main>
+
+        <!-- FOOTER -->
+        <footer>
+            <ul class="footer">
                 <li>&#169; A Natural Pest Solution. All rights reserved.</li>
-                <li>Website Developed by <a href="https://lei-rivera.github.io/">Lei Rivera</a></li>
+                <li><a href="https://lei-rivera.github.io" class="footer-link">Website Developed by Lei Rivera</a></li>
+                <li>Image By <a href="https://www.freepik.com/free-vector/tropical-fresh-green-leaves-white-banner-design_418224830.htm#fromView=keyword&page=1&position=25&uuid=11c26f80-b405-4fec-867c-d10fe807dfba&query=Leaves+background">Starline on Freepik</a></li>
             </ul>
-          </footer>
+        </footer>
     </body>
 
 </html>
