--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>REBUILD</title>
+        <title>A Natural Pest Solution</title>
 
         <!-- CSS LINK -->
         <link rel="stylesheet" href="styles.css">
+
+        <!-- ICON LINK -->
+        <link rel="icon" href="images/dragonfly-logo.svg">
 
         <!-- JAVASCRIPT LINK -->
         <script src="main.js" defer></script>
