--- a/subpages/rodents.html
+++ b/subpages/rodents.html
@@ -9,6 +9,9 @@
         <!-- CSS LINK -->
         <link rel="stylesheet" href="../styles.css">
 
+        <!-- ICON LINK -->
+        <link rel="icon" href="../images/dragonfly-logo.svg">
+
         <!-- FONT AWESOME LINK -->
         <script src="https://kit.fontawesome.com/26030cfeae.js" crossorigin="anonymous"></script>
 
