Change header position to static on mobile

--- a/subpages/rodents.html
+++ b/subpages/rodents.html
@@ -87,8 +87,8 @@
 
                 <!-- Image -->
                 <div class ="subpage-image">
-                    <div class="rodent-image"><img src="images/rodent_sign1.jpg" alt=""></div>
-                    <div class="rodent-image"><img src="images/rodent_sign2.jpg" alt=""></div>
+                    <div class="rodent-image"><img src="images/rodent_sign1.jpg" alt="rodent droppings and fur in the corner of the floor"></div>
+                    <div class="rodent-image"><img src="images/rodent_sign2.jpg" alt="rodent droppings near a potential entry point"></div>
                 </div>
             </div>
         </main>
