--- a/subpages/wasps.html
+++ b/subpages/wasps.html
@@ -80,9 +80,9 @@
 
             <!-- Image -->
             <div class ="wasp-subpage-image">
-                <div class="wasp-image"><img src="images/yellowjacket1.jpg" alt=""></div>
-                <div class="wasp-image"><img src="images/yellowjacket2.jpg" alt=""></div>
-                <div class="wasp-image"><img src="images/yellowjacket3.jpg" alt=""></div>
+                <div class="wasp-image"><img src="images/yellowjacket1.jpg" alt="yellowjacket peeking out of an exterior wall hole"></div>
+                <div class="wasp-image"><img src="images/yellowjacket2.jpg" alt="yellowjackets flying around the roof of a home"></div>
+                <div class="wasp-image"><img src="images/yellowjacket3.jpg" alt="thermal image taken using an FLIR camera showing a heat spot on a wall"></div>
             </div>
         </main>
 
