Add .captcha-div to recaptcha div and edit width

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         </div>
 
                         <!-- Recaptcha -->
-                        <div data-netlify-recaptcha="true" class="form-info"></div>
+                        <div data-netlify-recaptcha="true" class="form-info captcha-div"></div>
 
                         <!-- Submit Button -->
                         <div class="form-info">
